--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "dev": "tailwindcss --input C:/Users/Joe/Dev/Tailwind/Django-Tailwind/src/Portfolio/static/tailwind/tailwind-input.css --output C:/Users/Joe/Dev/Tailwind/Django-Tailwind/src/Portfolio/static/outputcss/tailwind-output.css --watch "
+    "dev": "tailwindcss --input C:/Users/Joe/Dev/Tailwind/Django-Tailwind/src/Portfolio/static/tailwind/tailwind-input.css --output C:/Users/Joe/Dev/Tailwind/Django-Tailwind/src/Portfolio/static/outputcss/tailwind-output.css --watch",
+    "prettier": "npx prettier --write **/*.html"
   },
   "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
